test/scripted/compilation2/errors/symbol_not_found.bnj
# test:subtest
# test:error 5:13 "cannot find 'b'"

func main() {
    var a = b;
}

# test:subtest
# test:error 11:16 "cannot find 'B'"

const A: i32 = B;
